fix: add padding on form on mobile view!

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -145,8 +145,8 @@ main {
   }
 
   .wrapper-form {
-    padding: 0;
-    margin: 1rem;
+    padding: 0.5rem;
+    margin: 0.3rem;
     width: 100%;
   }
 }
